assets/css/style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Archivo', Arial, Helvetica, sans-serif;
    box-sizing: border-box;
}

html, body {
    min-height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../img/heroimage.jpg);
    background-position: center;
    background-size: cover;
    position: relative;
}

.page-container{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main{
    flex:1;
}

/* Navigation */
nav {
    display: flex;
    width: 100%;
    max-width: 1200px;
    padding: 2% 6%;
    justify-content: space-between;
    align-items: center;
}

nav img {
    width: 150px;
}

.nav-links {
    flex: 1;
    text-align: right;
}

.nav-links ul {
    list-style: none;
    display: flex;
    justify-content: flex-end;
}

.nav-links ul li {
    display: inline-block;
    padding: 8px 12px;
}

.nav-links ul li a {
    color: #fff;
    text-decoration: none;
    font-size: 1em;
    letter-spacing: 2px;
    transition: color 0.3s;
}

.nav-links ul li a:hover {
    color: #C80036;
}

/* Main content */
.text-box {
    width: 90%;
    color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    margin-top: 20px;
}

.text-box h1 {
    font-size: 30px;
}

.text-box h2 {
    font-size: 40px;
    margin: 10px 0 20px;
}

/* CTA */
.hero-btn {
    display: inline-block;
    text-decoration: none;
    color: #fff;
    border: 1px solid #C80036;
    background: transparent;
    padding: 15px;
    border-radius: 30px;
    position: relative;
    cursor: pointer;
}

.hero-btn:hover {
    border: 1px solid #C80036;
    background: #C80036;
    transition: 1s;
}

/* best eats section */

.card-container{
    max-width: 1150px;
    padding: 0 30px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    column-gap: 20px;;
    row-gap: 20px;

}

.card:nth-of-type(1){
    flex:1 250px;;
}
.card:nth-of-type(2){
    flex:1 250px;
}
.card:nth-of-type(3){
    flex:1 250px;
}

.card{
    border-radius: 5px;
    box-shadow:  0px 10px 5px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
}

.card__image{

    width: 100%;
    height: 250px;
    object-fit: cover;
}

.card__content{
    background: #fff;
    flex-direction: column;
    display: flex;
    flex: 1;
}

.card__content h1{
    font-size: 1.5em;
    text-align: center;
    padding: 10px;
}

.card__content p{
    padding: 20px;
    flex: 1;
}

.card a{
    display: block;
    text-decoration: none;
    order: 1px solid #C80036;
    text-align: center;
    color:black;
    margin-top: auto;
    padding: 10px;
    transition: background-color 1s, color 1s;
}


.card-btn:hover{
    background-color: #C80036;
    color: #fff;
}

/* contact us page */
.form-container {
    width: 350px;
    max-width: 100%;
    background: #fff;
    padding: 20px;
    margin: 100px auto;
    box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
    border-radius: 30px;
    border: 1px solid rgba(0, 0, 0, 0.75);
}

form {
    width: 100%;
    margin: 40px auto;
}

form h1 {
    text-transform: uppercase;
    text-align: center;
    margin-bottom: 15px;
    font-size: 1.5em;
}

input, textarea {
    width: 100%;
    padding: 7px;
    border: none;
    outline: none;
    display: block;
    border-radius: 4px;
    margin-bottom: 10px;
    border: 1px solid black;
    resize: none;
}


form button {
    outline: none;
    border: 1px solid black;
    width: 100%;
    padding: 10px;
    background: #fff;
    cursor: pointer;
    color: black;
    border-radius: 7px;
}

form button:hover {
    background: #C80036;
    color: #fff;
}

/*footer*/
.footer{
    display: flex;
    flex-direction: column;
    padding: 20px 0;
    padding: 40px 0;
    background: transparent;
    margin-top: auto;
}

.footer .social{
    text-align: center;
    color: #C80036;
}

.footer .social a{
    font-size: 20px;
    color: inherit;
    height: 10px;
    width: 40px;
    line-height:18px;
    display: inline-block;
    text-align: center;
    margin: 0 8px;
    opacity: 0.75;
}

.footer .social a:hover{
    opacity: 4;
}

.footer .copyright{
    margin-top: 15px;
    text-align: center;
    font-size: 0.9em;
    color: #fff;

}
/* Responsiveness */
@media(max-width: 1200px) {

    .form-container {
        width: 400px;
    }
}

@media(max-width: 800px) {
    nav {
        flex-direction: column;
        align-items: center;
    }

    .nav-links {
        width: 100%;
        text-align: left;
        margin-top: 5px;
    }

    .nav-links ul {
        flex-direction: column;
        align-items: flex-start;
    }

    .nav-links ul li {
        padding: 5px 0;
        width: 100%;
    }

    .nav-links ul li a {
        padding: 10px 0;
        width: 100%;
        display: block;
    }

    .text-box {
        margin-top: 100px;
    }

    .text-box h1 {
        font-size: 2em;
    }

    .text-box h2 {
        font-size: 1.5em;
    }

    .hero-btn {
        padding: 10px 20px;
    }

    .form-container {
        width: 250px;
        padding: 15px;
        margin: 50px auto;
    }


    @media(max-width: 600px) {
        .form-container {
            width: 200px; 
        }
    }
}

